fix: sidenav is behind the header

--- a/src/management/api/healthcheck/_healthcheck.scss
+++ b/src/management/api/healthcheck/_healthcheck.scss
@@ -8,6 +8,7 @@ $healthcheckSidenavWidth: 500px;
 }
 
 md-sidenav.healthcheck {
+  padding-top: 54px;
   @include min-max-width($healthcheckSidenavWidth);
   background-color: #fafafa;
   md-content {
